Add env.bash error tracking and update build scripts and docs